Add placeholder to email text field

--- a/app/assets/javascripts/templates/avatars.handlebars
+++ b/app/assets/javascripts/templates/avatars.handlebars
@@ -1,5 +1,5 @@
 {{#view Avatar.FormView}}
-  {{view Em.TextField valueBinding="email"}}
+  {{view Em.TextField valueBinding="email" placeholder="me@example.com"}}
   <button
     {{bindAttr disabled="controller.preventsSubmit"}}>Get it</button>
 {{/view}}
